2011-09-02  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in term/cairo.trm:  Check for the presence of cairo-ps.h
	before trying to build the epscairo terminal.

2011-09-02  Bastian Maerkisch  <bmaerkisch@web.de>

	* docs/makefile.ami docs/old/README.ami docs/old/README.win 
	src/gnuplot.prj src/linkopt.ztc: Removed.

	* config/makefile.unx docs/Makefile.in src/Makefile.am: Remove
	references to obsolete files.

2011-09-01  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Yet another rewrite of the installation path rules for
	TeX files.
	Bug #3401370

	* configure.in: Remove some obsolete status messages.

2011-09-01  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm (EMF_put_text):  Use iconv to handle Shift_JIS encoding.

2011-08-31  Ethan A Merritt  <merritt@u.washington.edu>

	* m4/apple.m4:  Revert change of 2011-07-23 (aquaterm LIBS)

	* configure.in: Rewrite the installation path rules for TeX files.
	Bug #3401370

2011-08-29  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/winmain.c (_WIN32_IE): MinGW64 headers require IE >= 501.
	Bug #3398189

2011-08-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c src/stdfn.h src/getcolor.c:  Make "assert" statements
	trigger int_error() rather than abort(), so that debugging is easier.

2011-08-28  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:  sync to docs version 1.688

2011-08-28  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/plot2d.c (get_data): Revert yesterday's change to this file 
	because it broke stringvar.dem.

2011-08-27  Ethan A Merritt  <merritt@u.washington.edu>

	* PORTING src/makefile.all src/makefile.awc src/term.h configure.vms
	config/config.cyg config/config.dj2 config/config.mgw config/config.nt
	config/config.os2 config/config.oww config/makefile.unx configure.in:
	Remove obsolete mgr terminal driver.  The mgr window system offered a